--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_patient_home">PatientHome</string>
     <string name="title_activity_user_login">UserLogin</string>
     <string name="title_activity_maps">Map</string>
+    <string name="agora_app_id">fd6db7ee116b48039e92d7273b7249fe</string>
 </resources>
